objects/CN_Promotion_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>CN_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Is_Promotion_Planned__c</fullName>
        <formula>CN_Promotion_status__c = &quot;Planned&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Promotion Planned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Line Items</relationshipLabel>
        <relationshipName>Promotion_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_Price__c</fullName>
        <label>Promotion Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Promotion__c</fullName>
        <label>Promotion</label>
        <referenceTo>CN_Promotion__c</referenceTo>
        <relationshipLabel>Promotion Line Items</relationshipLabel>
        <relationshipName>Promotion_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_status__c</fullName>
        <formula>TEXT(CN_Promotion__r.CN_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion status</label>
        <type>Text</type>
    </fields>
    <label>Promotion Line Item</label>
    <nameField>
        <displayFormat>PLI-{0000000000}</displayFormat>
        <label>Promotion Line Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Line Items</pluralLabel>
    <recordTypes>
        <fullName>CN_Promotion_Line_Item</fullName>
        <active>true</active>
        <label>CN Promotion Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CN_Check_Price</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 CN_Promotion_Price__c &lt;= 0
)</errorConditionFormula>
        <errorDisplayField>CN_Promotion_Price__c</errorDisplayField>
        <errorMessage>Promotion Price must greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Product_Active</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
ISCHANGED(CN_Product__c),
NOT( CN_Product__r.IsActive )
)</errorConditionFormula>
        <errorDisplayField>CN_Product__c</errorDisplayField>
        <errorMessage>Product is inactive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Create_New_Item</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 NOT(CN_Is_Promotion_Planned__c ),
 ISNEW()
)</errorConditionFormula>
        <errorMessage>It&apos;s not allow to create new promotion line item if promotion is not planned</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Edit_Item</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 NOT(CN_Is_Promotion_Planned__c)
)</errorConditionFormula>
        <errorMessage>It&apos;s not allowed to edit if promotion is not planned.</errorMessage>
    </validationRules>
</CustomObject>